force-app/main/default/objects/Document_Request_Item__c/Document_Request_Item__c.object-meta.xml
<CustomObject>
    <label>Document Request Item</label>
    <nameField>
        <label>Document Request Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Document Request Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>