force-app/main/default/objects/Document_Request_Item__c/fields/Attachment_Id__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Id__c</fullName>
    <label>Attachment Id</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>