force-app/main/default/objects/Document_Request_Item__c/fields/Attachment_Name__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Name__c</fullName>
    <label>Attachment Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>