force-app/main/default/objects/Document_Request_Item__c/fields/Document_Requested__c.field-meta.xml
<CustomField>
    <fullName>Document_Requested__c</fullName>
    <label>Document Requested</label>
    <referenceTo>Document_Requested__c</referenceTo>
    <relationshipLabel>Document Request Items</relationshipLabel>
    <relationshipName>Document_Request_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>